--- a/week2-hw/assets/css/styles.css
+++ b/week2-hw/assets/css/styles.css
@@ -28,15 +28,25 @@ body {
     position: top;
 }
 
-#subtitle h2 {
+.subtitle h2 {
     display: right;
 
 }
 
 #history {
-    display: inline-block;
+    display: inline-flex;
     color: blueviolet;
-    font-size: 45px; 
+    font-size: 30px;
+    margin-left: 185px;
+        
+}
+
+p {
+    display: inline-flex;
+    color: black;
+    font-size: 20px;
+    float: right;
+    margin-left: 195px;
 }
 
 #grind ul li {
@@ -47,7 +57,9 @@ body {
 
 #grind h2 {
     display: left;
-    text-align: center;
+    text-align: left;
+    margin-top: 300px;
+    margin-left: 300px;
 }
 
 #contact {
