--- a/week2-hw/assets/css/styles.css
+++ b/week2-hw/assets/css/styles.css
@@ -8,8 +8,7 @@ body {
     background-color: white;
 }
 
-.nameplate,
-#nameplate section ul li {
+.nameplate {
     padding: 20px;
     font-family: 'Gill Sans', Arial, Helvetica, sans-serif;
     background-color: rgb(65, 63, 63);
@@ -18,18 +17,19 @@ body {
     font-size: 24px;
 }
 
-.nameplate section ul li {
+.nameplate div ul li {
     
-    padding-top: 5px;
+    padding-bottom: 50px;
     margin-right: 25px;
     font-size: 20px;
     margin-left: 25px;
     float: right;
     position: top;
+    
 }
 
 .subtitle h2 {
-    display: right;
+    float: right;
 
 }
 
@@ -47,6 +47,14 @@ p {
     font-size: 20px;
     float: right;
     margin-left: 195px;
+    border-left: 10px;
+    border-color: green;
+}
+
+button img {
+    width: 15%;
+    border: none;
+    display: grid;
 }
 
 #grind ul li {
@@ -56,10 +64,11 @@ p {
 }
 
 #grind h2 {
-    display: left;
+    display: inline-block;
     text-align: left;
     margin-top: 300px;
-    margin-left: 300px;
+    margin-left: 195px;
+    font-size: 30px;
 }
 
 #contact {
