--- a/week2-hw/assets/css/styles.css
+++ b/week2-hw/assets/css/styles.css
@@ -1,11 +1,14 @@
 * {
- box-sizing: border-box;   
- padding: 0;
+ box-sizing: content-box;
+ border-style: hidden;
  margin: 0;
+ scroll-behavior: smooth;
 }
 
-body {
-    background-color: white;
+.bg-img{
+    width: 100%;
+    height: 250px;
+    object-fit:cover;
 }
 
 .nameplate {
@@ -13,30 +16,36 @@ body {
     font-family: 'Gill Sans', Arial, Helvetica, sans-serif;
     background-color: rgb(65, 63, 63);
     color: teal;
-    display: block;
+    display: flex;
     font-size: 24px;
-}
+    justify-content: space-between;
+    align-items: center;
 
-.nameplate div ul li {
-    
-    padding-bottom: 50px;
-    margin-right: 25px;
+}
+.nameplate ul {
+    display: flex;
+    gap: 20px;
+    color: teal;
+}
+.nameplate ul li {
     font-size: 20px;
     position: top;
+    list-style-type: none;
     
 }
 
-.subtitle h2 {
-    float: right;
-
-}
-
-#history {
+.history {
     display: inline-flex;
     color: blueviolet;
     font-size: 30px;
-    margin-left: 185px;
-        
+    margin: 100px;
+}
+
+.history h2 {
+    border-right: solid;
+    border-right-width: thick;
+    border-right-color: cyan;
+    padding-right: 100px;
 }
 
 p {
@@ -44,37 +53,28 @@ p {
     color: black;
     font-size: 20px;
     float: right;
-    margin-left: 195px;
-    border-left: 10px;
-    border-color: green;
+    margin-left: 195px;}
+
+.tiles {
+    display: flex;
+    flex: wrap;
+    justify-content: space-evenly;
+    background-color: blueviolet;
 }
 
 button img {
-    width: 15%;
-    border: none;
-    display: grid;
+    min-height: 200px;
+    max-width: 1290px
+    
 }
 
-#grind ul li {
-    float: right;
-    display: inline-flex;
-    margin: 15px;
-}
-
-#grind h2 {
-    display: inline-block;
-    text-align: left;
-    margin-top: 300px;
-    margin-left: 195px;
-    font-size: 30px;
-}
-
-#contact {
+.contact-me {
+    font-size: larger;
     padding: 30px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: center;
     display: 25px;
     color: brown;
-    list-style: none;
-    margin-top: 300px; 
+    margin: 150px;
+    background-color: cyan;
 }
